--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -10,13 +10,8 @@
     "from selenium import webdriver\n",
     "import time\n",
     "import pandas as pd\n",
-    "import xgboost as xgb\n",
     "from xgboost import XGBRegressor\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV,cross_val_score\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "import numpy as np\n",
-    "from sklearn import model_selection\n",
-    "from playsound import playsound"
+    "import numpy as np"
    ]
   },
   {
@@ -607,8 +602,7 @@
     "            browser.execute_script(\"window.history.go(-1)\")\n",
     "        else:\n",
     "            browser.execute_script(\"window.history.go(-1)\")\n",
-    "browser.quit()\n",
-    "playsound(\"GoogleChromeKapaniyor.mp3\")"
+    "browser.quit()"
    ]
   },
   {
@@ -646,6 +640,253 @@
     "df_zingat.drop(\"index\", axis = 1, inplace = True)\n",
     "df_zingat.to_csv(\"zingat4.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ed3288d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2150000</td>\n",
+       "      <td>110 M2</td>\n",
+       "      <td>5-10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Kiracı Oturuyor</td>\n",
+       "      <td>04 Ocak 2023</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>100 M2</td>\n",
+       "      <td>2+1</td>\n",
+       "      <td>3.Kat</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4610000</td>\n",
+       "      <td>300 M2</td>\n",
+       "      <td>5-10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mülk Sahibi Oturuyor</td>\n",
+       "      <td>04 Ocak 2023</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>250 M2</td>\n",
+       "      <td>5+1</td>\n",
+       "      <td>Bahçe Dublex</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1200000</td>\n",
+       "      <td>120 M2</td>\n",
+       "      <td>0 (Yeni)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Boş</td>\n",
+       "      <td>04 Ocak 2023</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>110 M2</td>\n",
+       "      <td>3+1</td>\n",
+       "      <td>Yüksek Giriş</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>800000</td>\n",
+       "      <td>160 M2</td>\n",
+       "      <td>16-20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Kiracı Oturuyor</td>\n",
+       "      <td>28 Aralık 2022</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>125 M2</td>\n",
+       "      <td>2+1</td>\n",
+       "      <td>6.Kat</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1850000</td>\n",
+       "      <td>155 M2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Mülk Sahibi Oturuyor</td>\n",
+       "      <td>28 Haziran 2022</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>145 M2</td>\n",
+       "      <td>3+1</td>\n",
+       "      <td>3.Kat</td>\n",
+       "      <td>Merkezi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1302</th>\n",
+       "      <td>2100000</td>\n",
+       "      <td>188 M2</td>\n",
+       "      <td>0 (Yeni)</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Boş</td>\n",
+       "      <td>14 Aralık 2022</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>130 M2</td>\n",
+       "      <td>3+1</td>\n",
+       "      <td>3.Kat</td>\n",
+       "      <td>Yerden Isıtma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1303</th>\n",
+       "      <td>1550000</td>\n",
+       "      <td>125 M2</td>\n",
+       "      <td>11-15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Kiracı Oturuyor</td>\n",
+       "      <td>14 Aralık 2022</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>115 M2</td>\n",
+       "      <td>3+1</td>\n",
+       "      <td>1.Kat</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1304</th>\n",
+       "      <td>2995000</td>\n",
+       "      <td>145 M2</td>\n",
+       "      <td>5-10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mülk Sahibi Oturuyor</td>\n",
+       "      <td>14 Aralık 2022</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>130 M2</td>\n",
+       "      <td>3+1</td>\n",
+       "      <td>1.Kat</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1305</th>\n",
+       "      <td>550000</td>\n",
+       "      <td>90 M2</td>\n",
+       "      <td>21 Ve Üzeri</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Kiracı Oturuyor</td>\n",
+       "      <td>14 Aralık 2022</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>75 M2</td>\n",
+       "      <td>2+1</td>\n",
+       "      <td>5.Kat</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1306</th>\n",
+       "      <td>2490000</td>\n",
+       "      <td>165 M2</td>\n",
+       "      <td>5-10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mülk Sahibi Oturuyor</td>\n",
+       "      <td>14 Aralık 2022</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>135 M2</td>\n",
+       "      <td>3+1</td>\n",
+       "      <td>Çatı Dubleks</td>\n",
+       "      <td>Kombi Doğalgaz</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1307 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0       1            2  3                     4                5  \\\n",
+       "0     2150000  110 M2         5-10  5       Kiracı Oturuyor     04 Ocak 2023   \n",
+       "1     4610000  300 M2         5-10  3  Mülk Sahibi Oturuyor     04 Ocak 2023   \n",
+       "2     1200000  120 M2     0 (Yeni)  4                   Boş     04 Ocak 2023   \n",
+       "3      800000  160 M2        16-20  6       Kiracı Oturuyor   28 Aralık 2022   \n",
+       "4     1850000  155 M2            2  7  Mülk Sahibi Oturuyor  28 Haziran 2022   \n",
+       "...       ...     ...          ... ..                   ...              ...   \n",
+       "1302  2100000  188 M2     0 (Yeni)  6                   Boş   14 Aralık 2022   \n",
+       "1303  1550000  125 M2        11-15  3       Kiracı Oturuyor   14 Aralık 2022   \n",
+       "1304  2995000  145 M2         5-10  2  Mülk Sahibi Oturuyor   14 Aralık 2022   \n",
+       "1305   550000   90 M2  21 Ve Üzeri  5       Kiracı Oturuyor   14 Aralık 2022   \n",
+       "1306  2490000  165 M2         5-10  4  Mülk Sahibi Oturuyor   14 Aralık 2022   \n",
+       "\n",
+       "          6       7    8             9                10  \n",
+       "0     Konut  100 M2  2+1         3.Kat    Kombi Doğalgaz  \n",
+       "1     Konut  250 M2  5+1  Bahçe Dublex    Kombi Doğalgaz  \n",
+       "2     Konut  110 M2  3+1  Yüksek Giriş    Kombi Doğalgaz  \n",
+       "3     Konut  125 M2  2+1         6.Kat    Kombi Doğalgaz  \n",
+       "4     Konut  145 M2  3+1         3.Kat  Merkezi Doğalgaz  \n",
+       "...     ...     ...  ...           ...               ...  \n",
+       "1302  Konut  130 M2  3+1         3.Kat     Yerden Isıtma  \n",
+       "1303  Konut  115 M2  3+1         1.Kat    Kombi Doğalgaz  \n",
+       "1304  Konut  130 M2  3+1         1.Kat    Kombi Doğalgaz  \n",
+       "1305  Konut   75 M2  2+1         5.Kat    Kombi Doğalgaz  \n",
+       "1306  Konut  135 M2  3+1  Çatı Dubleks    Kombi Doğalgaz  \n",
+       "\n",
+       "[1307 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zingat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b44f4568",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
