--- a/Selenium-İle-Veri-Çekimi.ipynb
+++ b/Selenium-İle-Veri-Çekimi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "518cf7a2-79a2-4522-9e2d-28ac5d55834b",
    "metadata": {},
    "outputs": [],
@@ -15,174 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "c3fa5edf-3cb9-40fa-9f68-4d2c7e011218",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1880000\n",
-      "1285000\n",
-      "2850000\n",
-      "399000\n",
-      "2600000\n",
-      "2450000\n",
-      "5250000\n",
-      "850000\n",
-      "540000\n",
-      "870000\n",
-      "1850000\n",
-      "2375000\n",
-      "785000\n",
-      "739000\n",
-      "1325000\n",
-      "1550000\n",
-      "1250000\n",
-      "2400000\n",
-      "2900000\n",
-      "1600000\n",
-      "4600000\n",
-      "3200000\n",
-      "13900000\n",
-      "1020000\n",
-      "2050000\n",
-      "3825000\n",
-      "6550000\n",
-      "2900000\n",
-      "1100000\n",
-      "799000\n",
-      "875000\n",
-      "1699000\n",
-      "3729000\n",
-      "3729000\n",
-      "1450000\n",
-      "2000000\n",
-      "2499000\n",
-      "879000\n",
-      "750000\n",
-      "775000\n",
-      "1900000\n",
-      "1200000\n",
-      "775000\n",
-      "1650000\n",
-      "1540000\n",
-      "1200000\n",
-      "1270000\n",
-      "1800000\n",
-      "1040000\n",
-      "2050000\n",
-      "2920000\n",
-      "1600000\n",
-      "1150000\n",
-      "1120000\n",
-      "2900000\n",
-      "2470000\n",
-      "1765000\n",
-      "1250000\n",
-      "1900000\n",
-      "1200000\n",
-      "4000000\n",
-      "2600000\n",
-      "2615000\n",
-      "2615000\n",
-      "1675000\n",
-      "2070000\n",
-      "450000\n",
-      "1650000\n",
-      "570000\n",
-      "1590000\n",
-      "1250000\n",
-      "3450000\n",
-      "550000\n",
-      "2080000\n",
-      "850000\n",
-      "3650000\n",
-      "999000\n",
-      "1460000\n",
-      "1650000\n",
-      "4600000\n",
-      "2600000\n",
-      "990000\n",
-      "2180000\n",
-      "1245000\n",
-      "1790000\n",
-      "720000\n",
-      "650000\n",
-      "870000\n",
-      "1750000\n",
-      "1000000\n",
-      "1050000\n",
-      "2900000\n",
-      "1000000\n",
-      "4850000\n",
-      "9200000\n",
-      "4990000\n",
-      "2250000\n",
-      "4300000\n",
-      "1550000\n",
-      "1350000\n",
-      "840000\n",
-      "1985000\n",
-      "1725000\n",
-      "2155000\n",
-      "650000\n",
-      "1475000\n",
-      "2895000\n",
-      "3400000\n",
-      "5625000\n",
-      "1650000\n",
-      "1360000\n",
-      "1350000\n",
-      "1800000\n",
-      "2950000\n",
-      "5250000\n",
-      "1260000\n",
-      "6950000\n",
-      "1395000\n",
-      "1270000\n",
-      "350000\n",
-      "885000\n",
-      "425000\n",
-      "1160000\n",
-      "1229000\n",
-      "1250000\n",
-      "1150000\n",
-      "879000\n",
-      "4500000\n",
-      "3100000\n",
-      "2400000\n",
-      "520000\n",
-      "1100000\n",
-      "1565000\n",
-      "1890000\n",
-      "1690000\n",
-      "2900000\n",
-      "2200000\n",
-      "2550000\n",
-      "1380000\n",
-      "950000\n",
-      "4000000\n",
-      "2100000\n",
-      "1550000\n",
-      "2995000\n",
-      "550000\n",
-      "2490000\n",
-      "23000000\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "WebDriverException",
+     "evalue": "Message: disconnected: received Inspector.detached event\n  (failed to check if window was closed: disconnected: Unable to receive message from renderer)\n  (Session info: chrome=108.0.5359.125)\nStacktrace:\nBacktrace:\n\t(No symbol) [0x008FF243]\n\t(No symbol) [0x00887FD1]\n\t(No symbol) [0x0077D04D]\n\t(No symbol) [0x00770A79]\n\t(No symbol) [0x007706F1]\n\t(No symbol) [0x0076FB0B]\n\t(No symbol) [0x0076FA5C]\n\t(No symbol) [0x0076F356]\n\t(No symbol) [0x007830DD]\n\t(No symbol) [0x007DCDCE]\n\t(No symbol) [0x007C8386]\n\t(No symbol) [0x007A163C]\n\t(No symbol) [0x007A269D]\n\tGetHandleVerifier [0x00B99A22+2655074]\n\tGetHandleVerifier [0x00B8CA24+2601828]\n\tGetHandleVerifier [0x009A8C0A+619850]\n\tGetHandleVerifier [0x009A7830+614768]\n\t(No symbol) [0x008905FC]\n\t(No symbol) [0x00895968]\n\t(No symbol) [0x00895A55]\n\t(No symbol) [0x008A051B]\n\tBaseThreadInitThunk [0x74E77D69+25]\n\tRtlInitializeExceptionChain [0x76F8BB9B+107]\n\tRtlClearBits [0x76F8BB1F+191]\n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    181\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m fiyatlar:\n\u001b[0;32m    182\u001b[0m     fiyat\u001b[38;5;241m.\u001b[39mappend(j\u001b[38;5;241m.\u001b[39mtext)\n\u001b[1;32m--> 183\u001b[0m fiyat_sade \u001b[38;5;241m=\u001b[39m \u001b[43mfiyat\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m    184\u001b[0m fiyat_sade \u001b[38;5;241m=\u001b[39m fiyat_sade\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTL\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    185\u001b[0m fiyat_sade \u001b[38;5;241m=\u001b[39m fiyat_sade\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[1;31mWebDriverException\u001b[0m                        Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;66;03m# return string   \u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (str1\u001b[38;5;241m.\u001b[39mjoin(s)) \n\u001b[1;32m----> 7\u001b[0m \u001b[43mbrowser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://www.emlakjet.com/satilik-konut/bursa/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m k \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m49\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m (k\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m):\n",
+      "File \u001b[1;32m~\\anaconda4\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:442\u001b[0m, in \u001b[0;36mWebDriver.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    438\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    439\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    440\u001b[0m \u001b[38;5;124;03m    Loads a web page in the current browser session.\u001b[39;00m\n\u001b[0;32m    441\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 442\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGET\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43murl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda4\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:430\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    428\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    429\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 430\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    431\u001b[0m     response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(\n\u001b[0;32m    432\u001b[0m         response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    433\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32m~\\anaconda4\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:247\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    245\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    246\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 247\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mWebDriverException\u001b[0m: Message: disconnected: received Inspector.detached event\n  (failed to check if window was closed: disconnected: Unable to receive message from renderer)\n  (Session info: chrome=108.0.5359.125)\nStacktrace:\nBacktrace:\n\t(No symbol) [0x008FF243]\n\t(No symbol) [0x00887FD1]\n\t(No symbol) [0x0077D04D]\n\t(No symbol) [0x00770A79]\n\t(No symbol) [0x007706F1]\n\t(No symbol) [0x0076FB0B]\n\t(No symbol) [0x0076FA5C]\n\t(No symbol) [0x0076F356]\n\t(No symbol) [0x007830DD]\n\t(No symbol) [0x007DCDCE]\n\t(No symbol) [0x007C8386]\n\t(No symbol) [0x007A163C]\n\t(No symbol) [0x007A269D]\n\tGetHandleVerifier [0x00B99A22+2655074]\n\tGetHandleVerifier [0x00B8CA24+2601828]\n\tGetHandleVerifier [0x009A8C0A+619850]\n\tGetHandleVerifier [0x009A7830+614768]\n\t(No symbol) [0x008905FC]\n\t(No symbol) [0x00895968]\n\t(No symbol) [0x00895A55]\n\t(No symbol) [0x008A051B]\n\tBaseThreadInitThunk [0x74E77D69+25]\n\tRtlInitializeExceptionChain [0x76F8BB9B+107]\n\tRtlClearBits [0x76F8BB1F+191]\n"
      ]
     }
    ],
