--- a/Makine_Öğrenimi.ipynb
+++ b/Makine_Öğrenimi.ipynb
@@ -78,6 +78,7 @@
         "\n",
         "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, VotingRegressor\n",
         "from xgboost import XGBRegressor\n",
+        "from sklearn.metrics import r2_score"
       ]
     },
     {
