--- a/Makine_Öğrenimi.ipynb
+++ b/Makine_Öğrenimi.ipynb
@@ -77,7 +77,7 @@
         "import eli5\n",
         "\n",
         "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, VotingRegressor\n",
-        "from xgboost import XGBRegressor\n"
+        "from xgboost import XGBRegressor"
       ]
     },
     {
